# github_auto_updater

./: .gitignore  Cargo.toml  LICENSE_THIRD_PARTIES  README.md  rustfmt.toml
.github/workflows/: lint-test.yml
src/: main.rs
