[package]
name = "github_auto_updater"
version = "0.1.0"
authors = ["Chris Lovering <chris.lovering.95@gmail.com"]
edition = "2021"
description = "Keep your desired GitHub release assets up to date"
repository = "https://github.com/ChrisLovering/github_auto_updater"
license-file = "./LICENSE"
readme = "./README.md"
keywords = ["rust", "project", "github"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = { version="1.0.144", features=["derive"] }
serde_json = "1.0.85"
